[project]
name = "chatRDB"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]
dependencies = [
    "redis>=5.1.0",
    "fastapi>=0.115.0",
    "ollama>=0.3.3",
    "langchain-ollama>=0.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
